--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,183 @@
+@charset "UTF-8";
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
+  font-family: 'Roboto', sans-serif;
+  color: #17324d;
+  font-size: 100%;
+  text-rendering: optimizeLegibility;
+  -webkit-overflow-scrolling: touch;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  user-select: text;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  line-height: 1;
+  margin: 0;
+  background-color: #fbfbfb;
+}
+.strong {
+  font-weight: 700;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+ol,
+ul,
+li {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  border: 0;
+  outline: 0;
+  font-weight: inherit;
+  font-style: inherit;
+  font-family: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+ol,
+ul {
+  list-style: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 400;
+  line-height: 1.25;
+}
+h1 {
+  font-size: 1.5rem;
+  color: #0a1f33;
+}
+h2 {
+  font-size: 1.25rem;
+  color: #0a1f33;
+}
+h3 {
+  font-size: 1.125rem;
+}
+h4 {
+  font-size: 1rem;
+}
+h5 {
+  font-size: 0.875rem;
+}
+h6 {
+  font-size: 0.75rem;
+}
+a {
+  color: #5c7a99;
+  text-decoration: none;
+  transition: 0.1s color linear;
+}
+a:hover {
+  color: #005fb2;
+}
+a:active {
+  color: #00396b;
+}
+.svgwrapper .icon {
+  display: inline-block;
+}
+svg {
+  pointer-events: none;
+}
+iframe {
+  border: none;
+}
+#content {
+  max-width: 1500px;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  min-height: 85vh;
+  justify-content: space-between;
+}
+#content > div {
+  display: flex;
+  flex: auto;
+  flex-direction: column;
+}
+#root {
+  margin-top: 43px;
+  display: flex;
+  justify-content: left;
+}
+#root.no-margin-left {
+  margin-left: 0;
+}
+.footer {
+  border: 1px solid #000;
+  margin-left: 300px;
+  width: 240px;
+  background-color: #00f;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+}
+.root {
+  flex-grow: 1;
+  margin-bottom: 0px;
+}
+.toolbar {
+  background-color: #ffa500;
+}
+.grow {
+  flex-grow: 1;
+}
+.titleColor {
+  color: #fff;
+}
+.list {
+  border-right: 2px solid #000;
+  margin: 0px;
+  height: calc(100vh - 65px);
+  width: 240px;
+  background-color: #fff;
+  padding-left: 0px;
+  padding-right: 0px;
+  position: fixed;
+  overflow: scroll;
+}
+.move-right {
+  margin-left: 300px;
+  margin-top: 50px;
+}
+.default {
+  margin-left: 100px;
+  margin-top: 50px;
+}
+.ListItem {
+  padding-left: 0px;
 }
