--- a/src/containers/footer/index.styl
+++ b/src/containers/footer/index.styl
@@ -1,8 +1,7 @@
 .footer
-	border: 1px solid black
-	margin-left: 300px
-	width: 240px
-	background-color: blue
-	position: fixed
-	bottom: 0
-	text-align: center
+	border-top: 1px solid #e6ecf2
+	text-align: left
+
+.footer-text
+	font-size: 15px
+	color: #7d98b3
