--- a/src/containers/index.styl
+++ b/src/containers/index.styl
@@ -1,6 +1,17 @@
 .move-right
-   margin-left: 300px
-   margin-top: 50px
+   padding-left: 260px
+   width: 100vw
+
 .default
-   margin-left: 100px
-   margin-top: 50px
+   padding-left: 100px
+   width: 100vw
+
+.content
+  min-height: calc(100vh - 0px)
+  padding-top: 50px
+  padding-right: 50px
+
+.footer-position
+   margin-top: 30px
+ 	 position: relative
+ 	 bottom: 0
